--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -1,89 +1,99 @@
 .app {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
 .content {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-	width: 35rem;
-	margin-top: 12rem;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-	border-radius: 0.8rem;
-    padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  width: 35rem;
+  margin-top: 12rem;
+  box-shadow:
+    rgba(0, 0, 0, 0.09) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  border-radius: 0.8rem;
+  padding: 3rem;
+}
+
+.content--expanded {
+  margin-top: 4.5rem;
 }
 
 .logos {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
 
-    img {
-        width: 5rem;
-        height: 5rem;
-        border-radius: 0.5rem;
-    }
+  img {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 0.5rem;
+  }
 
-    p {
-        font-size: 2.8rem;
-    }
+  p {
+    font-size: 2.8rem;
+  }
 }
 
 .title {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .version {
-    margin-top: 0.4rem;
+  margin-top: 0.4rem;
 }
 
 .description {
-    margin-top: 1.5rem;
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: #2b2b2b;
-    width: 80%;
+  margin-top: 1.5rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: #2b2b2b;
+  width: 80%;
 }
 
 .button-container {
-    margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 @media (max-width: 900px) {
-    .app {
-        justify-content: center;
+  .app {
+    justify-content: center;
+  }
+
+  .content {
+    margin-top: 0;
+    width: 96%;
+    min-height: 65%;
+    justify-content: center;
+    padding: 1rem;
+  }
+
+  .logos {
+    img {
+      width: 4rem;
+      height: 4rem;
     }
 
-    .content {
-        margin-top: 0;
-        width: 96%;
-        min-height: 65%;
-        justify-content: center;
-        padding: 2rem;
+    p {
+      font-size: 2.4rem;
     }
+  }
 
-    .logos {
-        img {
-            width: 4rem;
-            height: 4rem;
-        }
+  .title {
+    font-size: 1.8rem;
+  }
 
-        p {
-            font-size: 2.4rem;
-        }
-    }
-
-    .title {
-        font-size: 1.8rem;
-    }
-
-    .description {
-        font-size: 1.4rem;
-    }
+  .description {
+    font-size: 1.4rem;
+    margin-top: 0.5rem;
+  }
 }
